--- a/ex1/makefile
+++ b/ex1/makefile
@@ -1,4 +1,4 @@
-COMP = g++-5.3.0
+COMP = g++#-5.3.0
 #put all your object files here
 OBJS = #objects should be placed here!
 #The executabel filename DON'T CHANGE
@@ -10,6 +10,12 @@ $(EXEC): $(OBJS)
 	$(COMP) $(OBJS) -o $@
 #a rule for building a simple c++ source file
 #use g++ -MM main.cpp to see dependencies
+RPSCommandFactoryUnitTest: RPSCommandFactoryUnitTest.o RPSCommandFactory.o
+	$(COMP) RPSCommandFactoryUnitTest.o RPSCommandFactory.o -o $@
+RPSCommandFactoryUnitTest.o: RPSCommandFactoryUnitTest.cpp RPSCommandFactory.h RPSCommand.h RPSPiece.h
+	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
+RPSCommandFactory.o: RPSCommandFactory.cpp RPSCommandFactory.h RPSCommand.h RPSPiece.h
+	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
 main.o: main.cpp #put dependencies here!
 	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
 clean:
