--- a/ADT/makefile
+++ b/ADT/makefile
@@ -1,7 +1,7 @@
 COMP = g++#-5.3.0
 #put all your object files here
-OBJS = #objects should be placed here!
-#The executabel filename DON'T CHANGE
+OBJS = RPSCommandFactory.o#objects should be placed here!
+#The executable filename DON'T CHANGE
 EXEC = ex1
 CPP_COMP_FLAG = -std=c++14 -Wall -Wextra \
 -Werror -pedantic-errors -DNDEBUG
@@ -10,6 +10,8 @@ $(EXEC): $(OBJS)
 	$(COMP) $(OBJS) -o $@
 #a rule for building a simple c++ source file
 #use g++ -MM main.cpp to see dependencies
+MainAux.o: MainAux.cpp MainAux.h RPSCommandFactory.h RPSGame.h RPSCommand.h RPSPiece.h
+	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
 RPSCommandFactoryUnitTest: RPSCommandFactoryUnitTest.o RPSCommandFactory.o
 	$(COMP) RPSCommandFactoryUnitTest.o RPSCommandFactory.o -o $@
 RPSCommandFactoryUnitTest.o: RPSCommandFactoryUnitTest.cpp RPSCommandFactory.h RPSCommand.h RPSPiece.h
