Fix N vs M and makefile

--- a/ex2/makefile
+++ b/ex2/makefile
@@ -1,6 +1,6 @@
 COMP = g++
 #put all your object files here
-OBJS = main.o #objects should be placed here!
+OBJS = main.o RPSBoard.o RPSAutomaticPlayerAlgorithm.o RPSFilePlayerAlgorithm.o RPSGame.o RPSPiece.o #objects should be placed here!
 #The executable filename DON'T CHANGE
 EXEC = ex2
 CPP_COMP_FLAG = -std=c++14 -Wall -Wextra \
@@ -10,9 +10,27 @@ $(EXEC): $(OBJS)
 	$(COMP) $(OBJS) -o $@
 #a rule for building a simple c++ source file
 #use g++ -MM main.cpp to see dependencies
-RPSBoard.o: RPSBoard.cpp RPSBoard.h Board.h Point.h
+RPSBoard.o: RPSBoard.cpp RPSBoard.h Board.h Point.h RPSPiece.h
+	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
+RPSAutomaticPlayerAlgorithm.o: RPSAutomaticPlayerAlgorithm.cpp RPSAutomaticPlayerAlgorithm.h PlayerAlgorithm.h Point.h PiecePosition.h Board.h FightInfo.h Move.h JokerChange.h RPSBoard.h RPSPiece.h RPSPoint.h RPSPiecePosition.h RPSMove.h RPSJokerChange.h
+	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
+RPSFightInfo.o: RPSFightInfo.h FightInfo.h RPSPoint.h Point.h
+	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
+RPSFilePlayerAlgorithm.o: RPSFilePlayerAlgorithm.cpp RPSFilePlayerAlgorithm.h PlayerAlgorithm.h Point.h PiecePosition.h Board.h FightInfo.h Move.h JokerChange.h RPSPiecePosition.h RPSPoint.h RPSMove.h RPSJokerChange.h RPSFightInfo.h RPSBoard.h RPSPiece.h
+	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
+RPSGame.o: RPSGame.cpp RPSGame.h RPSPiece.h PlayerAlgorithm.h Point.h PiecePosition.h Board.h FightInfo.h Move.h JokerChange.h RPSBoard.h RPSPiecePosition.h RPSPoint.h RPSFightInfo.h
+	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
+RPSJokerChange.o: RPSJokerChange.h JokerChange.h Point.h
+	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
+RPSMove.o: RPSMove.h Move.h Point.h
+	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
+RPSPiece.o: RPSPiece.cpp RPSPiece.h
+	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
+RPSPiecePosition.o: RPSPiecePosition.h PiecePosition.h Point.h RPSPoint.h
 	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
 RPSPoint.o: RPSPoint.h Point.h
+	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
+MainAux.o: MainAux.cpp PlayerAlgorithm.h Point.h PiecePosition.h Board.h FightInfo.h Move.h JokerChange.h MainAux.h RPSGame.h RPSPiece.h RPSBoard.h RPSPiecePosition.h RPSPoint.h RPSFightInfo.h
 	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
 main.o: main.cpp #put dependencies here!
 	$(COMP) $(CPP_COMP_FLAG) -c $*.cpp
